k8s/template/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: $APP_NAME-grafana
  namespace: $NAMESPACE
  name: $APP_NAME-grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: $APP_NAME-grafana
  template:
    metadata:
      labels:
        app: $APP_NAME-grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:8.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: $APP_NAME-grafana
      volumes:
        - name: $APP_NAME-grafana
          persistentVolumeClaim:
            claimName: $APP_NAME-grafana
